<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_inicio" />

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_agenda"/>

    <item
        android:id="@+id/nav_ai_chat"
        android:icon="@drawable/logo_kyro_no_bg"
        android:title="@string/nav_ia" />

    <item
        android:id="@+id/nav_asignatura"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_asignatura" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_ajustes" />

</menu>